ammarhamid/QLJava2/antlr-generated/org/uva/sea/ql/parser/QLParser.java
// $ANTLR 3.4 src/main/org/uva/sea/ql/parser/QL.g 2013-01-28 14:59:03

	package org.uva.sea.ql.parser;
	import org.uva.sea.ql.parser.exception.ParserException;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class QLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGNMENT", "BLOCK", "Boolean", "Comment", "Digit", "EXPRESSION", "FORM", "IF", "Identifier", "Integer", "Letter", "Money", "MultilineComment", "NEGATION", "NOT", "STATEMENT", "StringLiteral", "Whitespace", "'!'", "'!='", "'&&'", "'('", "')'", "'*'", "'+'", "'-'", "'/'", "':'", "'<'", "'<='", "'=='", "'>'", "'>='", "'boolean'", "'else'", "'form'", "'if'", "'integer'", "'money'", "'string'", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int ASSIGNMENT=4;
    public static final int BLOCK=5;
    public static final int Boolean=6;
    public static final int Comment=7;
    public static final int Digit=8;
    public static final int EXPRESSION=9;
    public static final int FORM=10;
    public static final int IF=11;
    public static final int Identifier=12;
    public static final int Integer=13;
    public static final int Letter=14;
    public static final int Money=15;
    public static final int MultilineComment=16;
    public static final int NEGATION=17;
    public static final int NOT=18;
    public static final int STATEMENT=19;
    public static final int StringLiteral=20;
    public static final int Whitespace=21;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public QLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public QLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[42+1];
         

    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return QLParser.tokenNames; }
    public String getGrammarFileName() { return "src/main/org/uva/sea/ql/parser/QL.g"; }


    	@Override
    	public void reportError(RecognitionException e)
    	{
    		super.reportError(e);
    		throw new ParserException(e.getMessage());
    	}


    public static class form_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "form"
    // src/main/org/uva/sea/ql/parser/QL.g:45:1: form : 'form' Identifier '{' block '}' -> ^( FORM Identifier ^( BLOCK block ) ) ;
    public final QLParser.form_return form() throws RecognitionException {
        QLParser.form_return retval = new QLParser.form_return();
        retval.start = input.LT(1);

        int form_StartIndex = input.index();

        CommonTree root_0 = null;

        Token string_literal1=null;
        Token Identifier2=null;
        Token char_literal3=null;
        Token char_literal5=null;
        QLParser.block_return block4 =null;


        CommonTree string_literal1_tree=null;
        CommonTree Identifier2_tree=null;
        CommonTree char_literal3_tree=null;
        CommonTree char_literal5_tree=null;
        RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
        RewriteRuleTokenStream stream_Identifier=new RewriteRuleTokenStream(adaptor,"token Identifier");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }

            // src/main/org/uva/sea/ql/parser/QL.g:46:2: ( 'form' Identifier '{' block '}' -> ^( FORM Identifier ^( BLOCK block ) ) )
            // src/main/org/uva/sea/ql/parser/QL.g:46:4: 'form' Identifier '{' block '}'
            {
            string_literal1=(Token)match(input,39,FOLLOW_39_in_form147); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_39.add(string_literal1);


            Identifier2=(Token)match(input,Identifier,FOLLOW_Identifier_in_form149); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_Identifier.add(Identifier2);


            char_literal3=(Token)match(input,44,FOLLOW_44_in_form151); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_44.add(char_literal3);


            pushFollow(FOLLOW_block_in_form153);
            block4=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block4.getTree());

            char_literal5=(Token)match(input,46,FOLLOW_46_in_form155); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_46.add(char_literal5);


            // AST REWRITE
            // elements: Identifier, block
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 46:36: -> ^( FORM Identifier ^( BLOCK block ) )
            {
                // src/main/org/uva/sea/ql/parser/QL.g:46:39: ^( FORM Identifier ^( BLOCK block ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(FORM, "FORM")
                , root_1);

                adaptor.addChild(root_1, 
                stream_Identifier.nextNode()
                );

                // src/main/org/uva/sea/ql/parser/QL.g:46:57: ^( BLOCK block )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(BLOCK, "BLOCK")
                , root_2);

                adaptor.addChild(root_2, stream_block.nextTree());

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, form_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "form"


    public static class block_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "block"
    // src/main/org/uva/sea/ql/parser/QL.g:49:1: block : ( statement )* ;
    public final QLParser.block_return block() throws RecognitionException {
        QLParser.block_return retval = new QLParser.block_return();
        retval.start = input.LT(1);

        int block_StartIndex = input.index();

        CommonTree root_0 = null;

        QLParser.statement_return statement6 =null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }

            // src/main/org/uva/sea/ql/parser/QL.g:50:5: ( ( statement )* )
            // src/main/org/uva/sea/ql/parser/QL.g:50:9: ( statement )*
            {
            root_0 = (CommonTree)adaptor.nil();


            // src/main/org/uva/sea/ql/parser/QL.g:50:9: ( statement )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==Identifier||LA1_0==40) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // src/main/org/uva/sea/ql/parser/QL.g:50:9: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_block185);
            	    statement6=statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, statement6.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, block_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "block"


    public static class statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statement"
    // src/main/org/uva/sea/ql/parser/QL.g:53:1: statement : ( ifStatement | assignmentStatement );
    public final QLParser.statement_return statement() throws RecognitionException {
        QLParser.statement_return retval = new QLParser.statement_return();
        retval.start = input.LT(1);

        int statement_StartIndex = input.index();

        CommonTree root_0 = null;

        QLParser.ifStatement_return ifStatement7 =null;

        QLParser.assignmentStatement_return assignmentStatement8 =null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }

            // src/main/org/uva/sea/ql/parser/QL.g:54:2: ( ifStatement | assignmentStatement )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==40) ) {
                alt2=1;
            }
            else if ( (LA2_0==Identifier) ) {
                alt2=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }
            switch (alt2) {
                case 1 :
                    // src/main/org/uva/sea/ql/parser/QL.g:54:4: ifStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_ifStatement_in_statement200);
                    ifStatement7=ifStatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, ifStatement7.getTree());

                    }
                    break;
                case 2 :
                    // src/main/org/uva/sea/ql/parser/QL.g:55:5: assignmentStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_assignmentStatement_in_statement206);
                    assignmentStatement8=assignmentStatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assignmentStatement8.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 3, statement_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "statement"


    public static class ifStatement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "ifStatement"
    // src/main/org/uva/sea/ql/parser/QL.g:58:1: ifStatement : ifStat ( elseIfStat )* ( elseStat )? -> ^( IF ifStat ( elseIfStat )* ( elseStat )? ) ;
    public final QLParser.ifStatement_return ifStatement() throws RecognitionException {
        QLParser.ifStatement_return retval = new QLParser.ifStatement_return();
        retval.start = input.LT(1);

        int ifStatement_StartIndex = input.index();

        CommonTree root_0 = null;

        QLParser.ifStat_return ifStat9 =null;

        QLParser.elseIfStat_return elseIfStat10 =null;

        QLParser.elseStat_return elseStat11 =null;


        RewriteRuleSubtreeStream stream_elseIfStat=new RewriteRuleSubtreeStream(adaptor,"rule elseIfStat");
        RewriteRuleSubtreeStream stream_ifStat=new RewriteRuleSubtreeStream(adaptor,"rule ifStat");
        RewriteRuleSubtreeStream stream_elseStat=new RewriteRuleSubtreeStream(adaptor,"rule elseStat");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }

            // src/main/org/uva/sea/ql/parser/QL.g:59:2: ( ifStat ( elseIfStat )* ( elseStat )? -> ^( IF ifStat ( elseIfStat )* ( elseStat )? ) )
            // src/main/org/uva/sea/ql/parser/QL.g:59:6: ifStat ( elseIfStat )* ( elseStat )?
            {
            pushFollow(FOLLOW_ifStat_in_ifStatement219);
            ifStat9=ifStat();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_ifStat.add(ifStat9.getTree());

            // src/main/org/uva/sea/ql/parser/QL.g:59:13: ( elseIfStat )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==38) ) {
                    int LA3_1 = input.LA(2);

                    if ( (LA3_1==40) ) {
                        alt3=1;
                    }


                }


                switch (alt3) {
            	case 1 :
            	    // src/main/org/uva/sea/ql/parser/QL.g:59:13: elseIfStat
            	    {
            	    pushFollow(FOLLOW_elseIfStat_in_ifStatement221);
            	    elseIfStat10=elseIfStat();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_elseIfStat.add(elseIfStat10.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            // src/main/org/uva/sea/ql/parser/QL.g:59:25: ( elseStat )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==38) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // src/main/org/uva/sea/ql/parser/QL.g:59:25: elseStat
                    {
                    pushFollow(FOLLOW_elseStat_in_ifStatement224);
                    elseStat11=elseStat();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_elseStat.add(elseStat11.getTree());

                    }
                    break;

            }


            // AST REWRITE
            // elements: ifStat, elseIfStat, elseStat
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 59:35: -> ^( IF ifStat ( elseIfStat )* ( elseStat )? )
            {
                // src/main/org/uva/sea/ql/parser/QL.g:59:38: ^( IF ifStat ( elseIfStat )* ( elseStat )? )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(IF, "IF")
                , root_1);

                adaptor.addChild(root_1, stream_ifStat.nextTree());

                // src/main/org/uva/sea/ql/parser/QL.g:59:50: ( elseIfStat )*
                while ( stream_elseIfStat.hasNext() ) {
                    adaptor.addChild(root_1, stream_elseIfStat.nextTree());

                }
                stream_elseIfStat.reset();

                // src/main/org/uva/sea/ql/parser/QL.g:59:62: ( elseStat )?
                if ( stream_elseStat.hasNext() ) {
                    adaptor.addChild(root_1, stream_elseStat.nextTree());

                }
                stream_elseStat.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 4, ifStatement_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "ifStatement"


    public static class ifStat_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "ifStat"
    // src/main/org/uva/sea/ql/parser/QL.g:62:1: ifStat : 'if' expression '{' block '}' -> ^( EXPRESSION expression ^( BLOCK block ) ) ;
    public final QLParser.ifStat_return ifStat() throws RecognitionException {
        QLParser.ifStat_return retval = new QLParser.ifStat_return();
        retval.start = input.LT(1);

        int ifStat_StartIndex = input.index();

        CommonTree root_0 = null;

        Token string_literal12=null;
        Token char_literal14=null;
        Token char_literal16=null;
        QLParser.expression_return expression13 =null;

        QLParser.block_return block15 =null;


        CommonTree string_literal12_tree=null;
        CommonTree char_literal14_tree=null;
        CommonTree char_literal16_tree=null;
        RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
        RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }

            // src/main/org/uva/sea/ql/parser/QL.g:63:5: ( 'if' expression '{' block '}' -> ^( EXPRESSION expression ^( BLOCK block ) ) )
            // src/main/org/uva/sea/ql/parser/QL.g:63:9: 'if' expression '{' block '}'
            {
            string_literal12=(Token)match(input,40,FOLLOW_40_in_ifStat255); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_40.add(string_literal12);


            pushFollow(FOLLOW_expression_in_ifStat257);
            expression13=expression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_expression.add(expression13.getTree());

            char_literal14=(Token)match(input,44,FOLLOW_44_in_ifStat259); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_44.add(char_literal14);


            pushFollow(FOLLOW_block_in_ifStat261);
            block15=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block15.getTree());

            char_literal16=(Token)match(input,46,FOLLOW_46_in_ifStat263); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_46.add(char_literal16);


            // AST REWRITE
            // elements: block, expression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 63:39: -> ^( EXPRESSION expression ^( BLOCK block ) )
            {
                // src/main/org/uva/sea/ql/parser/QL.g:63:42: ^( EXPRESSION expression ^( BLOCK block ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(EXPRESSION, "EXPRESSION")
                , root_1);

                adaptor.addChild(root_1, stream_expression.nextTree());

                // src/main/org/uva/sea/ql/parser/QL.g:63:66: ^( BLOCK block )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(BLOCK, "BLOCK")
                , root_2);

                adaptor.addChild(root_2, stream_block.nextTree());

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 5, ifStat_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "ifStat"


    public static class elseIfStat_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "elseIfStat"
    // src/main/org/uva/sea/ql/parser/QL.g:66:1: elseIfStat : 'else' 'if' expression '{' block '}' -> ^( EXPRESSION expression ^( BLOCK block ) ) ;
    public final QLParser.elseIfStat_return elseIfStat() throws RecognitionException {
        QLParser.elseIfStat_return retval = new QLParser.elseIfStat_return();
        retval.start = input.LT(1);

        int elseIfStat_StartIndex = input.index();

        CommonTree root_0 = null;

        Token string_literal17=null;
        Token string_literal18=null;
        Token char_literal20=null;
        Token char_literal22=null;
        QLParser.expression_return expression19 =null;

        QLParser.block_return block21 =null;


        CommonTree string_literal17_tree=null;
        CommonTree string_literal18_tree=null;
        CommonTree char_literal20_tree=null;
        CommonTree char_literal22_tree=null;
        RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
        RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }

            // src/main/org/uva/sea/ql/parser/QL.g:67:5: ( 'else' 'if' expression '{' block '}' -> ^( EXPRESSION expression ^( BLOCK block ) ) )
            // src/main/org/uva/sea/ql/parser/QL.g:67:9: 'else' 'if' expression '{' block '}'
            {
            string_literal17=(Token)match(input,38,FOLLOW_38_in_elseIfStat296); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_38.add(string_literal17);


            string_literal18=(Token)match(input,40,FOLLOW_40_in_elseIfStat298); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_40.add(string_literal18);


            pushFollow(FOLLOW_expression_in_elseIfStat300);
            expression19=expression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_expression.add(expression19.getTree());

            char_literal20=(Token)match(input,44,FOLLOW_44_in_elseIfStat302); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_44.add(char_literal20);


            pushFollow(FOLLOW_block_in_elseIfStat304);
            block21=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block21.getTree());

            char_literal22=(Token)match(input,46,FOLLOW_46_in_elseIfStat306); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_46.add(char_literal22);


            // AST REWRITE
            // elements: block, expression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 67:46: -> ^( EXPRESSION expression ^( BLOCK block ) )
            {
                // src/main/org/uva/sea/ql/parser/QL.g:67:49: ^( EXPRESSION expression ^( BLOCK block ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(EXPRESSION, "EXPRESSION")
                , root_1);

                adaptor.addChild(root_1, stream_expression.nextTree());

                // src/main/org/uva/sea/ql/parser/QL.g:67:73: ^( BLOCK block )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(BLOCK, "BLOCK")
                , root_2);

                adaptor.addChild(root_2, stream_block.nextTree());

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 6, elseIfStat_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "elseIfStat"


    public static class elseStat_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "elseStat"
    // src/main/org/uva/sea/ql/parser/QL.g:70:1: elseStat : 'else' '{' block '}' -> ^( EXPRESSION ^( BLOCK block ) ) ;
    public final QLParser.elseStat_return elseStat() throws RecognitionException {
        QLParser.elseStat_return retval = new QLParser.elseStat_return();
        retval.start = input.LT(1);

        int elseStat_StartIndex = input.index();

        CommonTree root_0 = null;

        Token string_literal23=null;
        Token char_literal24=null;
        Token char_literal26=null;
        QLParser.block_return block25 =null;


        CommonTree string_literal23_tree=null;
        CommonTree char_literal24_tree=null;
        CommonTree char_literal26_tree=null;
        RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return retval; }

            // src/main/org/uva/sea/ql/parser/QL.g:71:5: ( 'else' '{' block '}' -> ^( EXPRESSION ^( BLOCK block ) ) )
            // src/main/org/uva/sea/ql/parser/QL.g:71:9: 'else' '{' block '}'
            {
            string_literal23=(Token)match(input,38,FOLLOW_38_in_elseStat339); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_38.add(string_literal23);


            char_literal24=(Token)match(input,44,FOLLOW_44_in_elseStat341); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_44.add(char_literal24);


            pushFollow(FOLLOW_block_in_elseStat343);
            block25=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block25.getTree());

            char_literal26=(Token)match(input,46,FOLLOW_46_in_elseStat345); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_46.add(char_literal26);


            // AST REWRITE
            // elements: block
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
